--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:wght@300;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Water+Brush&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
 
 /* -------- Website Theme ------- */
 
@@ -29,7 +30,7 @@
 body{
     overflow-x: hidden;
     background-color: #fff;
-    font-family: "Water Brush", sans-serif;
+    font-family: "Parisienne", sans-serif;
     font-weight: 800;
     font-size: 24px;
 }
@@ -47,7 +48,6 @@ ul{
 .container{
     position: relative;
     width: 100%;
-    max-width: 40rem;
     padding: 0 1.5rem;
     margin: 0 auto;
 }
@@ -87,8 +87,8 @@ header.scrolled{
 nav.container{
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
-    
+    flex-wrap: wrap;    
+    justify-content: center;
 }
 
 header .logo-img{
@@ -99,7 +99,6 @@ header .logo-img{
 }
 
 .links{
-    flex: 1;
     display: flex;
 }
 
@@ -114,7 +113,7 @@ header .logo-img{
     display: inline-block;
     margin: 0 1rem;
     text-transform: uppercase;
-    font-size: 0.75rem;
+    font-size: 1rem;
     letter-spacing: 0.5px;
     /* color: var(--text-color); */
     color: black;
@@ -183,9 +182,21 @@ main {
     transition: 0.5s;
 }
 
-.pro:hover {
-}
-
 .pro img {
     width: 100%;
+}
+
+.main-content {
+    height: calc(100vh - 136px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home-text {
+    text-align: center;
+}
+
+.home-text p {
+    color: rgb(61, 85, 12);
 }
