--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,10 @@ main {
   padding: 4rem;
 }
 
+#home-content {
+  height: 80vh;
+}
+
 .pro-container {
   text-align: center;
   display: flex;
@@ -250,6 +254,10 @@ footer span {
 @media (max-width: 800px) {
   .container {
     justify-content: space-around;
+  }
+
+  #home-content{
+    height: 800px;
   }
 
   .pro-container {
