--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(/assets/img/foto.jpg);
+  background-image: url(../assets/img/foto.jpg);
   /* background-repeat: no-repeat; */
   /* filter: grayscale(100%); */
   background-position: center;
